<resources>
    <string name="app_name">WeWok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_identifier">S\'identifier</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="txt_login"> Entrez vos informations de connexion pour accéder à votre compte</string>
    <string name="txt_success">Votre commande a \nété enregistré avec succès!</string>
    <string name="txt_cmd_confim">Voulez vous confirmer la commande?</string>
    <string name="txt_num_cmd">Votre numéro de commande \nest : 6</string>
    <string name="txt_cmd_dispo">Votre commande sera disponible \ndans 30 min</string>
    <string name="mp_oublie">Mot de passe oublié ?</string>
    <string name="txt_zone">Vérifiez ta zone de livraison</string>
    <string name="txt_remplir">Veuillez remplir toutes vos informations personnelles et vérifier votre adresses avant de passer une commande</string>
    <string name="txt_verification">Voulez vous confirmer \nla commande?</string>
    <string name="txt_retour">Retour au menu principal</string>
    <string name="txt_compte_login">Vous n’avez pas de compte ?</string>
    <string name="txt_compte_signup">Vous avez déjà un compte ?</string>
    <string name="txt_signup">Entrez vos informations pour créer votre compte</string>
    <string name="txt_mp">Saisissez votre e-mail ci-dessus.\n Nous enverrons un lien pour réinitialiser votre mot de passe.</string>
    <string name="envoyer">Envoyer</string>
    <string name="continuer">Continuer</string>
    <string name="ma_base">Ma base</string>
    <string name="Etape_1_3">Etape 1/3</string>
    <string name="Etape_2_3">Etape 2/3</string>
    <string name="Etape_3_3">Etape 3/3</string>
    <string name="choisissez_votre_base">Choisissez votre base</string>
    <string name="souhaitez_vous_retirer_un_ingrédient_optionnel_">Souhaitez-vous retirer un ingrédient (optionnel) ?</string>
    <string name="mes_garnitures">Mes garnitures</string>
    <string name="choix_toppings">Choix toppings</string>
    <string name="ma_sauce">Ma sauce</string>
    <string name="Bangkok_thaï_traditionnel">Bangkok / thaï traditionnel</string>
    <string name="Phuket_aigre_douce">Phuket / aigre douce </string>
    <string name="Pattani_influence_Nippon">Pattani / influence Nippon</string>
    <string name="Pattaya_Chili_thaï">Pattaya / Chili thaï</string>
    <string name="Yala_curry_rouge_thaï">Yala / curry rouge thaï</string>
    <string name="Sadao_ail_gingembre">Sadao / ail gingembre</string>
    <string name="Cha_am_black_pepper">Cha-am / black pepper</string>
    <string name="Soja_soja_sucré_salé">Soja / soja sucré salé</string>
    <string name="Souhaitez_vous_des_couverts_">Souhaitez-vous des couverts ?</string>
    <string name="Fourchettes">Fourchettes</string>
    <string name="Baguettes">Baguettes</string>
    <string name="Sans_couverts_je_souhaite_préserver_ma_planète">Sans couverts, je souhaite préserver ma planète</string>
    <string name="Nos_boissons">Nos boissons</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Je_n_en_veux_plus">Non merci</string>
    <string name="Nos_desserts">Nos desserts</string>
    <string name="Veuillez_vérifier_votre_connexion_Internet">Veuillez vérifier votre connexion Internet</string>
    <string name="Protéines">Protéines</string>
    <string name="Fromages">Fromages</string>
    <string name="Fruits">Fruits et Legumes</string>
    <string name="Autres">Autres</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="votre_commande">Votre commande</string>
    <string name="entrez_votre_code">Entrez votre code</string>
    <string name="entrez_votre_pass">Entrez votre mot de passe</string>
    <string name="entrez_le_code_que_vous_avez_re_u_par_mail">Entrez le code que vous avez reçu par mail</string>
    <string name="code">Code</string>
    <string name="txt_about">Une folle envie de Wok ? N’attendez plus et commandez en quelques clics sur la nouvelle app Wewok !\nWewok vous propose une large gamme de saveur  d’inspiration Thaïlandaise, japonaise , Chinoise… en livraison ou à emporter : wok et saveur personnalisable à volonté mais aussi dessert boisson et signature  etc… Découvrez toutes nos recettes et notre carte pour émerveiller vos papilles !Simple et rapide d’utilisation, notre nouvelle app vous permet aussi de profiter facilement de vos avantages fidélité.\n\nCommandez en quelques clics !\n\nIndiquez-nous votre adresse de livraison ou, si vous préférez, choisissez votre restaurant Wewok  pour récupérer votre commande. Mettez ensuite au panier vos recettes favorites, il ne reste plus qu’à recevoir ou récupérer votre commande et Wewok s’occupe du reste !Prenez le temps de découvrir l’ensemble de notre carte et trouvez simplement les recettes qui vous plairont.\n
        Astuce pour les addicts : retrouvez vos commandes précédentes dans votre historique et remplissez votre panier en 1 clic.\n\nVotre gourmandise récompensée\n\nAvec notre programme de fidélité ”we fidélité” la gourmandise n’est plus un vilain défaut ! Découvrez vite votre statut pour profiter de vos avantages (#Wokdays à -10%, un dessert offert pour votre anniversaire et bien d’autres surprises à découvrir…).Sans oublier votre précieuse cagnotte : à chaque commande retirée en shop, vous cagnottez 5% du montant dépensé, à utiliser ensuite comme bon vous semble.Enfin, pour profiter au mieux de vos privilèges, retrouvez-les directement dans votre panier à chaque passage de commande.Souriez, vous êtes chouchouté !\n\nSuivez nos actualités…\n\nEn quête permanente de créativité et d’innovation, Wewok réinvente le wok  à l’infini , notamment à travers de perpétuel recherche de qualités et de saveurs.\nTout au long de l’année, découvrez également nos wok du mois en édition limitée, fruits de nos recherche pour vous satisfaires au mieux. Elles vous réservent en surprise les nouvelles recettes concoctées pour notre équipe de wokeur au grand cœur!\nVotre avis nous intéresse ! Faites-nous part de vos recommandations, votre satisfaction est notre priorité.</string>
    <string name="adresse">Adresse :\n98 Avenue de Colmar\n68100 Mulhouse</string>
    <string name="numero">0389523311</string>
</resources>