<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingStart="21dp"
    android:paddingEnd="21dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragments.PasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>


    <TextView
        android:id="@+id/txt_identifier"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/mp_oublie"
        android:textSize="20sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/guideline15H"
        app:layout_constraintBottom_toTopOf="@id/guideline25H"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline25H"
        app:layout_constraintBottom_toTopOf="@id/guideline40H"
        android:gravity="center_horizontal" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email_reset"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawablePadding="10dp"
        android:padding="5dp"
        android:textColorHint="@android:color/darker_gray"
        android:hint="Email"
        android:textCursorDrawable="@null"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:theme="@style/TextLabel"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/guideline40H"
        app:layout_constraintBottom_toTopOf="@id/guideline51H"
        />


    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/button_login"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/envoyer"
        android:textAllCaps="false"
        android:padding="1dp"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_reset"
        app:layout_constraintHeight_percent="0.1"/>

    <ProgressBar
        android:id="@+id/pg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>